--- a/gradle/pack/twitch.gradle
+++ b/gradle/pack/twitch.gradle
@@ -15,6 +15,10 @@ distributions {
                 include 'scripts/**'
             }
 
+            from(srcDir) {
+                include 'modlist.html'
+            }
+
             into '/'
         }
     }
